[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shapash"
dynamic = ["version"]

authors = [
    {name = "Yann Golhen"},
    {name = "Sebastien Bidault"},
    {name = "Yann Lagre"},
    {name = "Maxime Gendre"},
    {name = "Thomas Bouché", email = "thomas.bouche@maif.fr"},
    {name = "Maxime Lecardonnel"},
    {name = "Guillaume Vignal"},
]
description = "Shapash is a Python library which aims to make machine learning interpretable and understandable by everyone."
readme = "README.md"
requires-python = ">=3.11, <3.15"
license = {text = "Apache Software License 2.0"}
keywords = ["shapash"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "category_encoders>=2.6.0",
    "dash-bootstrap-components>=2.0.0",
    "dash-daq>=0.6.0",
    "dash-renderer==1.8.3",
    "dash>=3.0.0,<4.0.0",
    "Flask>=1.0.4",
    "matplotlib>=3.8.4",
    "nbformat>5.8.0",
    "numba>=0.60.0",
    "numpy>=2.0.0,<2.6.0",
    "pandas>=2.2.2,<3.0.4",
    "plotly>=5.0.0,<6.0.0",
    "scikit-learn>=1.8.0,<1.9.0",
    "scipy>=1.13.0",
    "shap>=0.46.0",
    "shapely>=2.0.0",
]

[project.optional-dependencies] # Optional
report = [
    "Jinja2>=3.1.0",
    "jupyter-client>=8.3.0",
    "nbconvert>=7.2.0",
    "notebook>=7.0.0",
    "papermill>=2.5.0",
    "phik>=0.12.4",
    "pyarrow>=17.0.0",
]
xgboost = ["xgboost>=2.1.0"]
catboost = ["catboost>=1.2.8"]
lightgbm = ["lightgbm>=4.4.0"]
lime = ["lime>=0.2.0.0"]

dev = ["pre-commit", "mypy", "ruff"]

test = ["pytest", "pytest-cov", "shapash[xgboost,catboost,lightgbm,lime,report]"]

doc = [
    "nbsphinx==0.8.8",
    "sphinx_material==0.0.35",
    "Sphinx==4.5.0",
    "sphinxcontrib-applehelp==1.0.2",
    "sphinxcontrib-devhelp==1.0.2",
    "sphinxcontrib-htmlhelp==2.0.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.3",
    "sphinxcontrib-serializinghtml==1.1.5",
]

all = ["shapash[dev, test, doc]"]

[project.urls]
Homepage = "https://github.com/MAIF/shapash"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.csv", "*json", "*.yml", "*.css", "*.js", "*.png", "*.ico", "*.ipynb", "*.html", "*.j2"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.report]
show_missing = true
fail_under = 75

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py311, py312, py313, py314

[testenv]
extras = test
commands = pytest {posargs}
"""

[tool.mypy]
exclude = ["tests", "tutorial"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
exclude = [
    "tests",
    "docs",
    "tutorial",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "A",    # flake8-builtins
    "PLC",  # pylint conventions
    "PLE",  # pylint errors
    "PLW",  # pylint warnings
    "UP",   # pyupgrade
    "S",    # flake8-bandit,
    "B",    # flake8-bugbear
    "I",    # isort
    "D",    # pydocstyle
    "NPY",  # NumPy-specific rules
]
ignore = ["E501", "D2", "D3", "D4", "D104", "D100", "D105", "D106", "D107", "S311"]
exclude = ["tests/*", "*.ipynb"]

[tool.ruff.lint.per-file-ignores]
"shapash/__init__.py" = ["F401"]
"shapash/backend/__init__.py" = ["F401"]
